--- a/css/page-style.css
+++ b/css/page-style.css
@@ -31,11 +31,13 @@
   padding: 30px 16px;
   font-size: 4em;
 }
-
+.section-image{
+  width: 100% !important;
+  height: 200px !important;
+}
 .content-section, .--container, .flex-content {
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: 50px;
+  margin-left: (100vw - 90vw);
+  margin-right: (100vw - 90vw);
 }
 .content-section p, .--container p, .flex-content p {
   text-align: justify;
@@ -48,13 +50,13 @@
 }
 
 .img-section {
-  width: 300px;
-  margin-right: 20px;
+ /* width: 400px;
+  /*margin-right: 20px;*/
 }
 .img-section img {
-  width: auto;
+  /*width: 100%;
   height: 200px;
-  border-radius: 5px;
+  border-radius: 5px;*/
 }
 
 .content {
