--- a/css/main-style.css
+++ b/css/main-style.css
@@ -4,7 +4,9 @@ body, html {
   height: 100%;
   overflow-x: hidden;
 }
-
+.m-logo{
+  display: none;
+}
 * {
   margin: 0;
 }
@@ -796,6 +798,12 @@ border-radius: 80%;
    display: none;
 
   }*/
+  .image-container{
+    align-items: center;
+    display: grid;
+    gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  }
   .address {
     text-align: center !important;
   }
@@ -805,13 +813,13 @@ border-radius: 80%;
     font-size: 15px;
   }
 
-  .client-logo {
+  .image-container, .client-logo {
     margin: auto;
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   }
-  .client-logo img {
+ .client-logo img {
     padding: 10px;
     max-width: 100%;
     height: 50px;
@@ -823,15 +831,17 @@ border-radius: 80%;
   }*/
 
   .logo {
-    display: block !important;
-   /* float: right;
-    display: block;*/
-   
+    display: none;
    
   }
+  .m-logo{
+    position: absolute;
+    left: 10px;
+    display: block;
+    padding: 10px;
+  }
 .logo a{
-  text-decoration: none !important;
-  display: block;
+ display: none;
   /*color:#070a68 !important;
   font-weight: bold !important;
   font-size: 25px !important;*/
@@ -842,6 +852,7 @@ border-radius: 80%;
     appearance: button;
     position: absolute;
     padding: 10px;
+    right: 10px;
     background-color: transparent;
     border: none;
     font-size: 25px;
@@ -1330,9 +1341,9 @@ border-radius: 80%;
     display: block;
   }
 
-  .logo {
+ /* .logo {
     display: none !important;
-  }
+  }*/
 
   .nav-container {
     height: 50px;
