--- a/css/page-style.css
+++ b/css/page-style.css
@@ -1,4 +1,46 @@
 @import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
+
+/*updated style rules 09/03/2022**/
+.article-container{
+  margin-left:calc(100vw - 95vw);
+  margin-right: calc(100vw - 95vw);
+  margin-top: 100px;
+}
+.article-title{
+  text-align: center;
+  font-size: 2.5em;
+  color: #070a68;
+}
+.article-container p{
+  font-size: 20px;
+  line-height: 35px;
+}
+.flex-box{
+  margin-top: 30px;
+  display: flex;
+  margin-left:calc(100vw - 95vw);
+  margin-right: calc(100vw - 95vw);
+}
+.flex-box article{
+  width: auto;
+  /*margin-left: 20px;*/
+  padding: 10px;
+}
+.img-box{
+  width: 500px;
+  max-width: 100%;
+}
+.flex-box p{
+  font-size: 20px;
+  line-height: 30px;
+}
+.flex-box h1{
+  color: #070a68;
+}
+.img-box img{
+  width: 100%;
+  height: 400px;
+}
 .page-banner {
   background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(14, 13, 13, 0.6)), url("../asset/about-bg.jpg");
   height: 50%;
@@ -191,6 +233,19 @@
 }
 
 @media (max-width: 740px) {
+  .article-container{
+    margin-left:5px;
+    margin-right: 5px;
+    margin-top: 100px;
+    flex-wrap: wrap;
+  }
+  .flex-box{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    margin-left:auto;
+    margin-right: auto;
+  }
   .--card {
     width: 300px;
     margin: auto;
