--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
 Theme Name: Wp-Corporate2
-Theme URI: https://wordpress.org/themes/twentytwenty/
+Theme URI: https://ultimatecybervision.com
 Author: Afolabi Samuel
 Description: Theme for Digital agency business
-Version: 1.4
+Version: 1.5
 Requires at least: 5.0
 Tested up to: 5.4
 Requires PHP: 7.0
